@@ -1,3 +1,9 @@
+Mon Jan 26 23:59:06 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: Finish the GUI plotting of vectorfield and
+	  slopefield, fix a leak on parametric plots, stretch out the labels
+	  in the dialogs to make things fit better and look nicer.
+
 Fri Dec 05 23:17:22 2008  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: raise the plot window on gui actions (pressing the
